--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,8 +34,8 @@
 }
 
 @font-face {
-  font-family: "Nitalago Ruika5";
-  src: url("/fonts/NitalagoRuika-05M.TTF");
+  font-family: "Nitalago Ruika6";
+  src: url("/fonts/NitalagoRuika-06M.TTF");
 }
 @font-face {
   font-family: "Euclid Flex Bold";
@@ -55,6 +55,18 @@
 @font-face {
   font-family: "Clash Display Bold";
   src: url("/fonts/ClashDisplay-Bold.woff2");
+}
+@font-face {
+  font-family: "Maru Mega Mini";
+  src: url("/fonts/GT-Maru-Mega-Mini.otf");
+}
+@font-face {
+  font-family: "Maru Black";
+  src: url("/fonts/GT-Maru-Black.otf");
+}
+@font-face {
+  font-family: "Maru Mono Bold";
+  src: url("/fonts/GT-Maru-Mono-Bold.otf");
 }
 
 :root {
