--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,7 @@
 @import "/node_modules/bulma/sass/helpers/visibility.sass";
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Zen+Kaku+Gothic+Antique:wght@400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Noto+Serif+JP:wght@700&display=swap");
 
 /* stylelint-enable */
 @font-face {
