--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,6 +29,11 @@
 }
 
 @font-face {
+  font-family: "Diatype Black";
+  src: url("/fonts/ABCDiatypeEdu-Black.otf");
+}
+
+@font-face {
   font-family: "Mario Maker";
   src: url("/fonts/Super-Mario-Maker.ttf");
 }
