--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,6 +28,28 @@
   src: url("/fonts/Mint-Grotesk-ExtraBold-V13.woff2");
 }
 
+@font-face {
+  font-family: "IBM Plex Sans Condensed Regular";
+  src: url("/fonts/IBMPlexSansCondensed-Regular.ttf");
+}
+
+@font-face {
+  font-family: "IBM Plex Sans Condensed Bold";
+  src: url("/fonts/IBMPlexSansCondensed-Bold.ttf");
+}
+
+@font-face {
+  font-family: "IBM Plex Sans JP Regular";
+  src: url("/fonts/IBMPlexSansJP-Regular.ttf");
+  size-adjust: 95%;
+}
+
+@font-face {
+  font-family: "IBM Plex Sans JP Bold";
+  src: url("/fonts/IBMPlexSansJP-Bold.ttf");
+  size-adjust: 95%;
+}
+
 :root {
   --dark-gray: #111;
   --black: #202025;
