--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,8 +29,16 @@
 }
 
 @font-face {
-  font-family: "Diatype Black";
-  src: url("/fonts/ABCDiatypeEdu-Black.otf");
+  font-family: GTFlexa-XCompressed-Bold;
+  src: url("/fonts/GT-Flexa-X-Compressed-Bold.otf");
+}
+@font-face {
+  font-family: GTFlexa-Bold;
+  src: url("/fonts/GT-Flexa-Standard-Bold.otf");
+}
+@font-face {
+  font-family: GTFlexa-Extended-Light;
+  src: url("/fonts/GT-Flexa-Extended-Light.otf");
 }
 
 @font-face {
