--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,7 +40,10 @@
   font-family: GTFlexa-Extended-Light;
   src: url("/fonts/GT-Flexa-Extended-Light.otf");
 }
-
+@font-face {
+  font-family: TPSkyModernStdN-Blk;
+  src: url("/fonts/TPSkyModernStdN-Blk.otf");
+}
 @font-face {
   font-family: "Mario Maker";
   src: url("/fonts/Super-Mario-Maker.ttf");
